Fixed Overlapping in Property Explore Page

--- a/src/pages/PropertyExplorePage.module.css
+++ b/src/pages/PropertyExplorePage.module.css
@@ -1,3 +1,8 @@
+.content {
+  margin-top: 10vh;
+  width: 100% !important;
+}
+
 .navbarChild {
   height: 102px;
   width: 1440px;
